--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         
         <div class="media">
           <a href=""><img src="whatsapp.png" alt=""></a>
-          <a href=""><img src="instagram.png" alt=""></a>
-          <a href=""><img src="tik-tok.png" alt=""></a>
+          <a href="https://instagram.com/nomadic.bdg?igshid=NTc4MTIwNjQ2YQ=="><img src="instagram.png" alt=""></a>
+          <a href="https://www.tiktok.com/@nomadic_coffee?_t=8ccp67pkBf8&_r=1"><img src="tik-tok.png" alt=""></a>
         </div>
       </span>
     </div>
